<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/nap_message"
            android:textColor="#FF0000"
            android:textSize="20sp" />

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="#4169E1"
            android:textSize="20sp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chronometer1"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chronometer1"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/start"
                android:focusable="true"
                android:nextFocusDown="@+id/button2"
                android:text="@string/start" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chronometer1"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/button1"
                android:contentDescription="@string/stop"
                android:focusable="true"
                android:nextFocusUp="@id/button1"
                android:text="@string/stop" />
        </android.support.v7.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>